up to q13 complete

--- a/Labs/6-projection/makefile
+++ b/Labs/6-projection/makefile
@@ -1,7 +1,7 @@
-pillar: pillar.c
-	gcc -o pillar pillar.c -lglut -lGL -lGLU -lm
+3dpillarlab: 3dpillarlab.c
+	gcc -o pillar 3dpillarlab.c -lglut -lGL -lGLU -lm
 
-run: pillar
+run: 3dpillarlab
 	bspc rule -a \* -o state=floating && ./pillar
 
 .PHONY: clean
