--- a/Labs/6-projection/makefile.bk
+++ b/Labs/6-projection/makefile.bk
@@ -2,7 +2,7 @@
 	gcc -o pillar 3dpillarlab.c -lglut -lGL -lGLU -lm
 
 run: 3dpillarlab
-	bspc rule -a \* -o state=floating && ./pillar
+	./pillar
 
 .PHONY: clean
 
