--- a/Projects/2nd-project/Code/makefile
+++ b/Projects/2nd-project/Code/makefile
@@ -1,5 +1,5 @@
-rotary: weiglej-p2.c
-	gcc -o rotary weiglej-p2.c hashtable.c -lglut -lGL -lGLU
+rotary: weiglej_p2.c
+	gcc -o rotary weiglej_p2.c hashtable.c drawfunctions.c -lglut -lGL -lGLU -lm
 
 run: rotary
 	./rotary
