animation good for real now

--- a/Projects/2nd-project/Code/makefile
+++ b/Projects/2nd-project/Code/makefile
@@ -2,7 +2,7 @@ rotary: weiglej_p2.c
 	gcc -o rotary weiglej_p2.c hashtable.c drawfunctions.c -lglut -lGL -lGLU -lm
 
 run: rotary
-	./rotary
+	bspc rule -a \* -o state=floating && ./rotary
 
 .PHONY: clean
 
