--- a/Labs/13-textures2/makefile
+++ b/Labs/13-textures2/makefile
@@ -1,7 +1,7 @@
-auto: autotexcoords.c
-	gcc -o x autotexcoords.c -lglut -lGL -lGLU -lm
+tex: tex-lab2-zoom.c
+	gcc -o x tex-lab2-zoom.c SOIL/SOIL.c SOIL/image_DXT.c SOIL/image_helper.c SOIL/stb_image_aug.c -lglut -lGL -lGLU -lm
 
-run: auto
+run: tex
 	./x
 
 .PHONY: clean
