pictures up to q18 taken, need to answer questions still

--- a/Labs/13-textures2/makefile
+++ b/Labs/13-textures2/makefile
@@ -1,5 +1,5 @@
-tex: tex-lab2-zoom.c
-	gcc -o x tex-lab2-zoom.c SOIL/SOIL.c SOIL/image_DXT.c SOIL/image_helper.c SOIL/stb_image_aug.c -lglut -lGL -lGLU -lm
+tex: bmp-loader.c
+	gcc -o x bmp-loader.c SOIL/SOIL.c SOIL/image_DXT.c SOIL/image_helper.c SOIL/stb_image_aug.c -lglut -lGL -lGLU -lm
 
 run: tex
 	./x
